# dpyc-oracle

./: .fastmcp.yaml  CHANGELOG.md  README.md  fastmcp.json  pyproject.toml  renovate.json  server.json
.github/workflows/: test.yml
src/dpyc_oracle/: __init__.py  config.py  registry.py  server.py
tests/: test_registry.py  test_tools.py
