[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpyc-oracle"
version = "0.1.1"
description = "DPYC Honor Chain community concierge — free MCP service for membership, governance, and onboarding"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Lonnie VanZandt" },
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "nostr-sdk>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dpyc_oracle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
